--- a/public/admin/all-bookings-page.scss
+++ b/public/admin/all-bookings-page.scss
@@ -109,6 +109,38 @@
                font-weight: bold;
                margin-top: 10px;
             }
+
+            .booking-actions {
+               display: flex;
+               align-items: center;
+               justify-content: space-between;
+               margin-top: 5px;
+
+               .actions {
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+
+                  .action-btn {
+                     display: flex;
+                     align-items: center;
+                     gap: 5px;
+                     border-radius: 6px;
+                     background-color: gs.$dark-bg;
+                     color: white;
+                     outline: none;
+                     border: none;
+                     padding: 6px 15px;
+                     text-decoration: none;
+                     border: 2px gs.$dark-bg solid;
+
+                     &:hover {
+                        background-color: white;
+                        color: gs.$dark-bg;
+                     }
+                  }
+               }
+            }
          }
       }
 
