--- a/public/utils/global-styles.scss
+++ b/public/utils/global-styles.scss
@@ -36,10 +36,12 @@ header {
    padding-left: 50px;
    padding-right: 50px;
 
-   h1 {
+   .app-title {
       font-size: 1.5rem;
       font-weight: bold;
       margin: 0;
+      text-decoration: none;
+      color: white;
    }
 
    nav {
