--- a/src/views/admin/all-bookings-page/all-bookings-page.ejs
+++ b/src/views/admin/all-bookings-page/all-bookings-page.ejs
@@ -13,68 +13,8 @@
   <!-- Header -->
   <%- include('../../partials/page-header') %>
 
-  <main id="main-section">
-    <section class="title-section">
-      <h3>Tất cả các đơn đặt bàn</h3>
-    </section>
-
-    <section class="result-summary">
-      <p>
-        <i class="bi bi-card-text"></i>
-        <span>Tổng cộng <%= bookings?.length || 0 %> đơn đặt bàn.</span>
-      </p>
-    </section>
-
-    <section class="result-section">
-      <% if (bookings && bookings.length > 0) { %>
-      <div class="booking-list">
-        <% bookings.forEach(({ReservationID,Cus_FullName,Cus_Phone,ArrivalTime,NumAdults,NumChildren,Note,Status,CreatedAt,TablesList,Reason}) => { %>
-        <div class="booking-card">
-          <div class="card-title">
-            <h5>Đơn #<%= ReservationID %></h5>
-            <% if (Status === 'Pending') { %>
-            <div class="status pending">Chưa được xử lý</div>
-            <% } else if (Status === 'Approved') { %>
-            <div class="status approved">Đã duyệt</div>
-            <% } else if (Status === 'Cancelled') { %>
-            <div class="status cancelled">Đã hủy</div>
-            <% } else { %>
-            <div class="status rejected">Đã từ chối</div>
-            <% } %>
-          </div>
-          <div class="card-info">
-            <p><strong>Họ tên:</strong> <%= Cus_FullName %></p>
-            <p><strong>Số điện thoại:</strong> <%= Cus_Phone %></p>
-            <p><strong>Giờ đặt:</strong> <%= ArrivalTime %></p>
-            <p><strong>Người lớn:</strong> <%= NumAdults %>, <strong>Trẻ em:</strong> <%= NumChildren %></p>
-            <p><strong>Ghi chú:</strong> <%= Note || "Không có" %></p>
-            <p><strong>Ngày tạo đơn:</strong> <%= CreatedAt %></p>
-          </div>
-          <% if (Reason) { %>
-          <div class="reject-reason">
-            <strong>Lý do:</strong> <%= Reason %>
-          </div>
-          <% } else if (TablesList && TablesList.length > 0) { %>
-          <div class="tables-list">
-            <span>Danh sách bàn:</span>
-            <% TablesList.forEach(({TableNumber},index) => {%>
-            <span><%= TableNumber %><%= index === TablesList.length - 1 ? '' : ',' %></span>
-            <% }) %>
-          </div>
-          <% } %>
-        </div>
-        <% }); %>
-      </div>
-      <% } else { %>
-      <div class="empty-result">
-        <p class="empty-content">
-          <i class="bi bi-exclamation-circle"></i>
-          <span>Không có kết quả nào</span>
-        </p>
-      </div>
-      <% } %>
-    </section>
-  </main>
+  <!-- Main -->
+  <%- include('./main') %>
 
   <!-- Footer -->
   <%- include('../../partials/page-footer') %>
