--- a/src/views/partials/page-header.ejs
+++ b/src/views/partials/page-header.ejs
@@ -1,6 +1,16 @@
 <header>
-  <h1>Nhà Hàng KingBuf</h1>
+  <a class="app-title" href="/">Nhà Hàng KingBuf</a>
   <nav>
+    <% if (isAdmin) { %>
+    <ul>
+      <li>
+        <a href="/admin/all-bookings" class="nav-item">
+          <i class="bi bi-list-columns-reverse"></i>
+          <span>Danh sách đơn đặt bàn</span>
+        </a>
+      </li>
+    </ul>
+    <% } else { %>
     <ul>
       <li>
         <a href="/" class="nav-item">
@@ -21,5 +31,6 @@
         </a>
       </li>
     </ul>
+    <% } %>
   </nav>
 </header>
