--- a/public/admin/all-bookings-page.scss
+++ b/public/admin/all-bookings-page.scss
@@ -133,6 +133,7 @@
                      padding: 6px 15px;
                      text-decoration: none;
                      border: 2px gs.$dark-bg solid;
+                     margin-top: 5px;
 
                      &:hover {
                         background-color: white;
