--- a/public/admin/processing-page.scss
+++ b/public/admin/processing-page.scss
@@ -181,20 +181,8 @@ $tab-darker-border: #dedede;
             }
          }
 
-         .reject-cancel-form {
+         .reject-form {
             .form-group {
-               &.warning {
-                  input,
-                  textarea {
-                     border-color: red;
-                     outline: 1px red solid;
-                  }
-
-                  .message {
-                     display: flex;
-                  }
-               }
-
                label {
                   display: block;
                   color: gs.$gray;
@@ -275,6 +263,116 @@ $tab-darker-border: #dedede;
 
             &.empty {
                color: rgba(128, 128, 128, 0.552);
+            }
+         }
+      }
+   }
+}
+
+#cancel-booking {
+   margin-top: 20px;
+
+   .open-cancel-booking-btn {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      color: white;
+      padding: 5px 15px;
+      border-radius: 4px;
+      background-color: gs.$primary-color;
+      font-weight: bold;
+      font-size: 1rem;
+      border: 2px gs.$primary-color solid;
+
+      &:hover {
+         background-color: white;
+         color: gs.$dark-bg;
+      }
+   }
+
+   .form-group {
+      label {
+         display: block;
+         color: gs.$gray;
+         font-weight: 600;
+         margin-bottom: 0.3rem;
+         padding-left: 5px;
+      }
+
+      input,
+      textarea {
+         width: 100%;
+         padding: 0.75rem;
+         border: 1px solid #d1d5db;
+         border-radius: 0.375rem;
+         outline: none;
+
+         &:focus {
+            border-color: gs.$primary-color;
+            box-shadow: 0 0 0 2px rgba(234, 179, 8, 0.5);
+         }
+      }
+   }
+
+   .confirm-cancel-booking {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+
+      .btns {
+         display: flex;
+         gap: 10px;
+
+         .cancel-btn {
+            color: gs.$dark-bg;
+            font-weight: bold;
+            padding: 4px 15px;
+            border-radius: 6px;
+            border: none;
+            background-color: gs.$dark-bg;
+            border: 2px gs.$dark-bg solid;
+            color: white;
+
+            &:hover {
+               color: black;
+               background-color: white;
+
+               .spinner-border {
+                  color: gs.$primary-hover;
+               }
+            }
+         }
+
+         .submit-btn {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            border-radius: 6px;
+            padding: 6px 15px;
+            color: white;
+            font-weight: bold;
+            border: 2px gs.$primary-color solid;
+            background-color: gs.$primary-color;
+
+            i {
+               font-size: 1.2rem;
+            }
+
+            &:hover {
+               color: black;
+               background-color: white;
+
+               .spinner-border {
+                  color: gs.$primary-hover;
+               }
+            }
+
+            .spinner-border {
+               display: flex;
+               height: 19.2px;
+               width: 19.2px;
+               color: white;
+               margin: 0 auto;
             }
          }
       }
