--- a/src/views/admin/due-date-bookings/due-date-bookings-page.ejs
+++ b/src/views/admin/due-date-bookings/due-date-bookings-page.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <%- include('../../partials/head-libs') %>
-  <link rel="stylesheet" href="/admin/login-page.css" />
+  <link rel="stylesheet" href="/admin/due-date-bookings/due-date-bookings-page.css" />
   <title>KingBuf - Nhà hàng của mọi nhà</title>
 </head>
 
@@ -20,7 +20,7 @@
   <%- include('../../partials/page-footer') %>
 
   <%- include('../../partials/script-libs') %>
-  <script src="/admin/login-page.js" defer></script>
+  <script src="/admin/due-date-bookings/due-date-bookings-page.js" defer></script>
 </body>
 
 </html>
