--- a/public/admin/processing/processing-page.css
+++ b/public/admin/processing/processing-page.css
@@ -68,7 +68,7 @@ footer p {
 
 #main-section {
   min-height: calc(100vh - 60.8px - 68.8px);
-  padding: 20px 50px;
+  padding: 20px 50px 50px 50px;
 }
 
 #booking-details .top-title {
@@ -95,10 +95,11 @@ footer p {
 #booking-details .details .booking-id .status.pending {
   background-color: #eab308;
 }
-#booking-details .details .booking-id .status.approved {
+#booking-details .details .booking-id .status.approved, #booking-details .details .booking-id .status.completed {
   background-color: #50cd9f;
 }
-#booking-details .details .form-groups {
+
+#update-booking-form .form-groups {
   display: flex;
   flex-wrap: wrap;
   column-gap: 16px;
@@ -107,32 +108,75 @@ footer p {
   width: 100%;
   margin-top: 5px;
 }
-#booking-details .details .form-groups .form-group {
+#update-booking-form .form-groups .form-group {
   flex: 1 1 calc(50% - 16px);
   display: flex;
   flex-direction: column;
   margin-top: 15px;
 }
-#booking-details .details .form-groups .form-group label {
+#update-booking-form .form-groups .form-group label {
   font-weight: bold;
   color: #4b5563;
   margin-bottom: 4px;
   padding-left: 5px;
 }
-#booking-details .details .form-groups .form-group p {
-  background: white;
+#update-booking-form .form-groups .form-group input,
+#update-booking-form .form-groups .form-group p,
+#update-booking-form .form-groups .form-group textarea {
+  background-color: white;
   padding: 8px;
   border-radius: 4px;
   box-shadow: 0 0 1px gray;
   margin: 0;
+  outline: none;
+  border: none;
 }
-#booking-details .details .form-groups .form-group p.empty {
-  color: rgba(128, 128, 128, 0.552);
+#update-booking-form .form-groups .form-group.status input,
+#update-booking-form .form-groups .form-group.status p,
+#update-booking-form .form-groups .form-group.status textarea {
+  background-color: transparent;
+}
+#update-booking-form .form-groups .form-group.created-at input,
+#update-booking-form .form-groups .form-group.created-at p,
+#update-booking-form .form-groups .form-group.created-at textarea {
+  background-color: transparent;
+}
+#update-booking-form .btns {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+#update-booking-form .btns .submit-btn {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  border-radius: 6px;
+  background-color: #1f2937;
+  color: white;
+  outline: none;
+  border: none;
+  padding: 6px 15px;
+  text-decoration: none;
+  border: 2px #1f2937 solid;
+  margin-top: 5px;
+}
+#update-booking-form .btns .submit-btn:hover {
+  background-color: white;
+  color: #1f2937;
+}
+#update-booking-form .btns .submit-btn:hover .spinner-border {
+  color: #1f2937;
+}
+#update-booking-form .btns .submit-btn .spinner-border {
+  display: flex;
+  height: 19.2px;
+  width: 19.2px;
+  color: white;
+  margin: 0 auto;
 }
 
 #booking-processing {
   margin-top: 50px;
-  padding-bottom: 20px;
 }
 #booking-processing .top-title {
   font-weight: bold;
@@ -258,7 +302,7 @@ footer p {
 #booking-processing .processed-booking .notice i {
   font-size: 3rem;
 }
-#booking-processing .processed-booking .notice.approved {
+#booking-processing .processed-booking .notice.approved, #booking-processing .processed-booking .notice.completed {
   color: #50cd9f;
 }
 #booking-processing .processed-booking .notice.rejected, #booking-processing .processed-booking .notice.cancelled {
@@ -284,6 +328,36 @@ footer p {
 }
 #booking-processing .processed-booking .form-group p.empty {
   color: rgba(128, 128, 128, 0.552);
+}
+
+#complete-booking {
+  margin-top: 20px;
+}
+#complete-booking .complete-booking-btn {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 4px;
+  background-color: #50cd9f;
+  font-weight: bold;
+  font-size: 1rem;
+  border: 2px #50cd9f solid;
+}
+#complete-booking .complete-booking-btn:hover {
+  background-color: white;
+  color: #1f2937;
+}
+#complete-booking .complete-booking-btn:hover .spinner-border {
+  color: #50cd9f;
+}
+#complete-booking .complete-booking-btn .spinner-border {
+  display: flex;
+  height: 18.4px;
+  width: 18.4px;
+  color: white;
+  margin: 0 auto;
 }
 
 #cancel-booking {
