--- a/public/admin/processing/processing-page.scss
+++ b/public/admin/processing/processing-page.scss
@@ -1,11 +1,11 @@
-@use "../utils/global-styles.scss" as gs;
+@use "../../utils/global-styles.scss" as gs;
 
 $tab-border: #dee2e6;
 $tab-darker-border: #dedede;
 
 #main-section {
    min-height: calc(100vh - 60.8px - 68.8px);
-   padding: 20px 50px;
+   padding: 20px 50px 50px 50px;
 }
 
 #booking-details {
@@ -35,45 +35,101 @@ $tab-darker-border: #dedede;
             &.pending {
                background-color: gs.$primary-color;
             }
-            &.approved {
+            &.approved,
+            &.completed {
                background-color: gs.$success-color;
             }
          }
       }
+   }
+}
 
-      .form-groups {
+#update-booking-form {
+   .form-groups {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 16px;
+      background: gs.$light-bg;
+      border-radius: 8px;
+      width: 100%;
+      margin-top: 5px;
+
+      .form-group {
+         flex: 1 1 calc(50% - 16px);
          display: flex;
-         flex-wrap: wrap;
-         column-gap: 16px;
-         background: gs.$light-bg;
-         border-radius: 8px;
-         width: 100%;
+         flex-direction: column;
+         margin-top: 15px;
+
+         label {
+            font-weight: bold;
+            color: gs.$gray;
+            margin-bottom: 4px;
+            padding-left: 5px;
+         }
+
+         input,
+         p,
+         textarea {
+            background-color: white;
+            padding: 8px;
+            border-radius: 4px;
+            box-shadow: 0 0 1px gray;
+            margin: 0;
+            outline: none;
+            border: none;
+         }
+
+         &.status {
+            input,
+            p,
+            textarea {
+               background-color: transparent;
+            }
+         }
+         &.created-at {
+            input,
+            p,
+            textarea {
+               background-color: transparent;
+            }
+         }
+      }
+   }
+
+   .btns {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+
+      .submit-btn {
+         display: flex;
+         align-items: center;
+         gap: 5px;
+         border-radius: 6px;
+         background-color: gs.$dark-bg;
+         color: white;
+         outline: none;
+         border: none;
+         padding: 6px 15px;
+         text-decoration: none;
+         border: 2px gs.$dark-bg solid;
          margin-top: 5px;
 
-         .form-group {
-            flex: 1 1 calc(50% - 16px);
+         &:hover {
+            background-color: white;
+            color: gs.$dark-bg;
+
+            .spinner-border {
+               color: gs.$dark-bg;
+            }
+         }
+
+         .spinner-border {
             display: flex;
-            flex-direction: column;
-            margin-top: 15px;
-
-            label {
-               font-weight: bold;
-               color: gs.$gray;
-               margin-bottom: 4px;
-               padding-left: 5px;
-            }
-
-            p {
-               background: white;
-               padding: 8px;
-               border-radius: 4px;
-               box-shadow: 0 0 1px gray;
-               margin: 0;
-
-               &.empty {
-                  color: rgba(128, 128, 128, 0.552);
-               }
-            }
+            height: 19.2px;
+            width: 19.2px;
+            color: white;
+            margin: 0 auto;
          }
       }
    }
@@ -81,7 +137,6 @@ $tab-darker-border: #dedede;
 
 #booking-processing {
    margin-top: 50px;
-   padding-bottom: 20px;
 
    .top-title {
       font-weight: bold;
@@ -233,7 +288,8 @@ $tab-darker-border: #dedede;
             font-size: 3rem;
          }
 
-         &.approved {
+         &.approved,
+         &.completed {
             color: gs.$success-color;
          }
          &.rejected,
@@ -265,6 +321,40 @@ $tab-darker-border: #dedede;
                color: rgba(128, 128, 128, 0.552);
             }
          }
+      }
+   }
+}
+
+#complete-booking {
+   margin-top: 20px;
+
+   .complete-booking-btn {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      color: white;
+      padding: 5px 15px;
+      border-radius: 4px;
+      background-color: gs.$success-color;
+      font-weight: bold;
+      font-size: 1rem;
+      border: 2px gs.$success-color solid;
+
+      &:hover {
+         background-color: white;
+         color: gs.$dark-bg;
+
+         .spinner-border {
+            color: gs.$success-color;
+         }
+      }
+
+      .spinner-border {
+         display: flex;
+         height: 18.4px;
+         width: 18.4px;
+         color: white;
+         margin: 0 auto;
       }
    }
 }
