--- a/src/views/partials/page-header.ejs
+++ b/src/views/partials/page-header.ejs
@@ -4,6 +4,12 @@
     <% if (isAdmin) { %>
     <ul>
       <li>
+        <a href="/admin/all-tables" class="nav-item">
+          <i class="bi bi-border-style"></i>
+          <span>Danh sách bàn</span>
+        </a>
+      </li>
+      <li>
         <a href="/admin/all-bookings" class="nav-item">
           <i class="bi bi-list-columns-reverse"></i>
           <span>Danh sách đơn đặt bàn</span>
