--- a/public/admin/all-tables/all-tables-page.css
+++ b/public/admin/all-tables/all-tables-page.css
@@ -267,4 +267,91 @@ footer p {
   margin: 0 auto;
 }
 
+#update-table-form .form-groups {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  background: #f3f4f6;
+  border-radius: 8px;
+  width: 100%;
+  padding: 20px;
+  gap: 10px;
+}
+#update-table-form .form-groups .form-group {
+  flex: 1 1 calc(50% - 16px);
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px;
+}
+#update-table-form .form-groups .form-group label {
+  font-weight: bold;
+  color: #4b5563;
+  margin-bottom: 4px;
+  padding-left: 5px;
+}
+#update-table-form .form-groups .form-group input,
+#update-table-form .form-groups .form-group textarea,
+#update-table-form .form-groups .form-group .dropdown-toggle {
+  background-color: white;
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: 0 0 1px gray;
+  margin: 0;
+  outline: none;
+  border: none;
+  line-height: 1.1;
+}
+#update-table-form .form-groups .form-group .dropdown {
+  flex-grow: 1;
+}
+#update-table-form .form-groups .form-group .dropdown .dropdown-toggle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  color: black;
+  width: 100%;
+  height: 100%;
+}
+#update-table-form .form-groups .form-group .dropdown .dropdown-toggle::after {
+  color: gray;
+}
+#update-table-form .form-groups .form-group .message {
+  color: red;
+  padding-left: 5px;
+  margin-top: 4px;
+  font-weight: 600;
+  font-size: 0.9rem;
+}
+#update-table-form .submit-section {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+  margin-top: 10px;
+}
+#update-table-form .submit-section .submit-btn {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  padding: 5px 15px;
+  border-radius: 4px;
+  background-color: #1f2937;
+  border: 2px #1f2937 solid;
+  color: white;
+}
+#update-table-form .submit-section .submit-btn:hover {
+  background-color: white;
+  color: #1f2937;
+}
+#update-table-form .submit-section .submit-btn:hover .spinner-border {
+  color: #1f2937;
+}
+#update-table-form .submit-section .submit-btn .spinner-border {
+  display: flex;
+  height: 18.4px;
+  width: 18.4px;
+  color: white;
+  margin: 0 auto;
+}
+
 /*# sourceMappingURL=all-tables-page.css.map */
