--- a/public/admin/all-tables/all-tables-page.scss
+++ b/public/admin/all-tables/all-tables-page.scss
@@ -244,3 +244,104 @@
       }
    }
 }
+
+#update-table-form {
+   .form-groups {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 16px;
+      background: gs.$light-bg;
+      border-radius: 8px;
+      width: 100%;
+      padding: 20px;
+      gap: 10px;
+
+      .form-group {
+         flex: 1 1 calc(50% - 16px);
+         display: flex;
+         flex-direction: column;
+         margin-top: 5px;
+
+         label {
+            font-weight: bold;
+            color: gs.$gray;
+            margin-bottom: 4px;
+            padding-left: 5px;
+         }
+
+         input,
+         textarea,
+         .dropdown-toggle {
+            background-color: white;
+            padding: 8px;
+            border-radius: 4px;
+            box-shadow: 0 0 1px gray;
+            margin: 0;
+            outline: none;
+            border: none;
+            line-height: 1.1;
+         }
+
+         .dropdown {
+            flex-grow: 1;
+
+            .dropdown-toggle {
+               display: flex;
+               justify-content: space-between;
+               align-items: center;
+               gap: 10px;
+               color: black;
+               width: 100%;
+               height: 100%;
+
+               &::after {
+                  color: gray;
+               }
+            }
+         }
+
+         .message {
+            color: red;
+            padding-left: 5px;
+            margin-top: 4px;
+            font-weight: 600;
+            font-size: 0.9rem;
+         }
+      }
+   }
+
+   .submit-section {
+      display: flex;
+      justify-content: end;
+      gap: 10px;
+      margin-top: 10px;
+
+      .submit-btn {
+         display: flex;
+         gap: 5px;
+         align-items: center;
+         padding: 5px 15px;
+         border-radius: 4px;
+         background-color: gs.$dark-bg;
+         border: 2px gs.$dark-bg solid;
+         color: white;
+
+         &:hover {
+            background-color: white;
+            color: gs.$dark-bg;
+
+            .spinner-border {
+               color: gs.$dark-bg;
+            }
+         }
+
+         .spinner-border {
+            display: flex;
+            height: 18.4px;
+            width: 18.4px;
+            color: white;
+            margin: 0 auto;
+         }
+      }
+   }
+}
